# xloc2-emu

./: .gitignore  Arduino.h  CMakeLists.txt  FIRMWARE_PATCHES.md  README.md  build-core.sh
.github/workflows/: build.yml
app/: CMakeLists.txt
app/Source/: CoreLoader.cpp  CoreLoader.h  CorePanel.cpp  CorePanel.h  EmuEngine.cpp  EmuEngine.h  Main.cpp  OledComponent.cpp  OledComponent.h  PanelComponent.cpp  PanelComponent.h  RoutingPanel.cpp  RoutingPanel.h  TestBenchPanel.cpp  TestBenchPanel.h
core/: emu.cpp  emu.h  emu_internal.h  emu_main.cpp  xloc2_core_api.cpp  xloc2_core_api.h
firmware/: README.md  TODO.md
firmware/software/: platformio.ini  slot0.ld  slot1.ld  slot2.ld  slot3.ld
firmware/software/src/: AppletRegistry.h  AudioIO.cpp  CVInputMap.h  HSApplication.h  HSIOFrame.cpp  HSIOFrame.h  HSUtils.cpp  HSUtils.h  HemisphereApplet.h  HemisphereAudioApplet.h  Main.cpp  OC_app_switcher.h  OC_apps.cpp  OC_apps.h  OC_calibration.cpp  OC_calibration.h  OC_core.cpp  OC_core.h  OC_debug.cpp  OC_global_settings.h  OC_gpio.cpp  OC_gpio.h  OC_io_settings.h  OC_menus.h  OC_storage.h  OC_ui.cpp  OC_ui.h  OC_version.h  OC_visualfx.h  SegmentDisplay.h  icons.h  tideslite.h
firmware/software/src/Audio/: AudioEffectModalResonator.h  abyss_core.h  animorf_core.h  effect_abyss.h  effect_animorf.h
firmware/software/src/applets/: CVRecV2.h  ClockSetup.h  ClockSetupT4.h  MidiLoop.h  VectorLFO.h  _config.h  hMIDIOut.h
firmware/software/src/apps/: ASR.h  Automatonnetz.h  BBGEN.h  Backup.h  Calibr8or.h  CaptainMIDI.h  Chords.h  DQ.h  Enigma.h  H1200.h  Hemisphere.h  Lorenz.h  NeuralNetwork.h  Passencore.h  Piqued.h  PongGame.h  QQ.h  Quadrants.h  Quadraturia.h  References.h  SETTINGS.h  ScaleEditor.h  Scenery.h  Sequins.h  TheDarkestTimeline.h  Viznutcracker.h  WaveformEditor.h  _config.h
firmware/software/src/audio_applets/: AbyssApplet.h  AdvKrpsStrngApplet.h  AnimorfApplet.h  DynamicsApplet.h  InputApplet.h  ModalResonatorApplet.h  ThreeBandz.h  TuneTrackerApplet.h  _config.h
firmware/software/src/src/Audio/: SafeNoteFrequencyAnalyzer.h  effect_dynamics.cpp  effect_dynamics.h  filter_variable2.cpp  synth_advanced_karplus.h
firmware/software/src/src/UI/: ui_button.h  ui_encoder.h  ui_event_queue.h
firmware/software/src/src/drivers/: weegfx.cpp  weegfx.h
firmware/software/src/src/tonnetz/: tonnetz.h
firmware/software/src/util/: util_math.h  util_misc.h
firmware/software/src/vector_osc/: HSVectorOscillator.h
patches/: dspinst.patch  filter_variable2.patch  modal_resonator.patch  util_math.patch  weegfx.patch
scripts/: build-core.sh
shim/: Arduino.h  Audio.h  DMAChannel.h  EEPROM.h  FS.h  IntervalTimer.h  LittleFS.h  MIDI.h  MTP_Teensy.h  SD.h  SPI.h  TeensyVariablePlayback.h  USBHost_t36.h  Wire.h  arm_math.h  malloc.h  shim_arduino.cpp  shim_audio.cpp  shim_drivers.cpp  smalloc.h  synth_waveform.h  synth_whitenoise.h  usb_desc.h  usb_midi_shim.h  waveheaderparser.h
shim/avr/: pgmspace.h
shim/utility/: dspinst.h  sqrt_integer.h
test/: dbg.cpp  headless.cpp
